// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Page Header events - renders correctly 1`] = `
<div
  class="ecl-page-header"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb ecl-page-header__breadcrumb"
      data-ecl-breadcrumb="true"
    >
      <ol
        class="ecl-breadcrumb__container"
      >
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          aria-hidden="false"
          class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
          data-ecl-breadcrumb-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <div
      class="ecl-page-header__meta-list"
    >
      News article | 17 October 2015
    </div>
    <h1
      class="ecl-page-header__title"
    >
      Page title
    </h1>
    <ul
      class="ecl-page-header__info-list"
    >
      <li
        class="ecl-page-header__info-item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-page-header__info-icon"
          focusable="false"
        >
          <use
            xlink:href="static/icons.svg#general--calendar"
          />
        </svg>
        Monday 8 February
      </li>
      <li
        class="ecl-page-header__info-item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-page-header__info-icon"
          focusable="false"
        >
          <use
            xlink:href="static/icons.svg#general--location"
          />
        </svg>
        Munich, Germany
      </li>
      <li
        class="ecl-page-header__info-item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-page-header__info-icon"
          focusable="false"
        >
          <use
            xlink:href="static/icons.svg#general--livestreaming"
          />
        </svg>
        Live streaming available
      </li>
    </ul>
  </div>
</div>
`;

exports[`EC - Page Header events-description - renders correctly 1`] = `
<div
  class="ecl-page-header"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb ecl-page-header__breadcrumb"
      data-ecl-breadcrumb="true"
    >
      <ol
        class="ecl-breadcrumb__container"
      >
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          aria-hidden="false"
          class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
          data-ecl-breadcrumb-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <div
      class="ecl-page-header__meta-list"
    >
      News article | 17 October 2015
    </div>
    <h1
      class="ecl-page-header__title"
    >
      Page title
    </h1>
    <p
      class="ecl-page-header__description"
    >
      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
    </p>
    <ul
      class="ecl-page-header__info-list"
    >
      <li
        class="ecl-page-header__info-item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-page-header__info-icon"
          focusable="false"
        >
          <use
            xlink:href="static/icons.svg#general--calendar"
          />
        </svg>
        Monday 8 February
      </li>
      <li
        class="ecl-page-header__info-item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-page-header__info-icon"
          focusable="false"
        >
          <use
            xlink:href="static/icons.svg#general--location"
          />
        </svg>
        Munich, Germany
      </li>
      <li
        class="ecl-page-header__info-item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-page-header__info-icon"
          focusable="false"
        >
          <use
            xlink:href="static/icons.svg#general--livestreaming"
          />
        </svg>
        Live streaming available
      </li>
    </ul>
  </div>
</div>
`;

exports[`EC - Page Header meta-title - renders correctly 1`] = `
<div
  class="ecl-page-header"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb ecl-page-header__breadcrumb"
      data-ecl-breadcrumb="true"
    >
      <ol
        class="ecl-breadcrumb__container"
      >
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          aria-hidden="false"
          class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
          data-ecl-breadcrumb-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <div
      class="ecl-page-header__meta-list"
    >
      News article | 17 October 2015
    </div>
    <h1
      class="ecl-page-header__title"
    >
      Page title
    </h1>
  </div>
</div>
`;

exports[`EC - Page Header meta-title-description - renders correctly 1`] = `
<div
  class="ecl-page-header"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb ecl-page-header__breadcrumb"
      data-ecl-breadcrumb="true"
    >
      <ol
        class="ecl-breadcrumb__container"
      >
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          aria-hidden="false"
          class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
          data-ecl-breadcrumb-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <div
      class="ecl-page-header__meta-list"
    >
      News article | 17 October 2015
    </div>
    <h1
      class="ecl-page-header__title"
    >
      Page title
    </h1>
    <p
      class="ecl-page-header__description"
    >
      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
    </p>
  </div>
</div>
`;

exports[`EC - Page Header title - renders correctly 1`] = `
<div
  class="ecl-page-header"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb ecl-page-header__breadcrumb"
      data-ecl-breadcrumb="true"
    >
      <ol
        class="ecl-breadcrumb__container"
      >
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          aria-hidden="false"
          class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
          data-ecl-breadcrumb-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <h1
      class="ecl-page-header__title"
    >
      Page title
    </h1>
  </div>
</div>
`;

exports[`EC - Page Header title-description - renders correctly 1`] = `
<div
  class="ecl-page-header"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb ecl-page-header__breadcrumb"
      data-ecl-breadcrumb="true"
    >
      <ol
        class="ecl-breadcrumb__container"
      >
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          aria-hidden="false"
          class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
          data-ecl-breadcrumb-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <h1
      class="ecl-page-header__title"
    >
      Page title
    </h1>
    <p
      class="ecl-page-header__description"
    >
      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
    </p>
  </div>
</div>
`;
